--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fq.archetypes</groupId>
+    <groupId>com.cainiao.archetypes</groupId>
     <artifactId>my-archetype-webapp</artifactId>
     <packaging>war</packaging>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
 
     <name>my-archetype-webapp</name>
     <url>http://maven.apache.org</url>
